force-app/main/default/objects/KimbleOne__InvoiceLineItem__c/KimbleOne__InvoiceLineItem__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <description>An item, e.g. TimeEntry, Milestone, RevenuItem, Incident Resolution, included on an Invoice Line.</description>
    <label>Invoice Line Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>