force-app/main/default/objects/KimbleOne__InvoiceLineItem__c/fields/KimbleOne__CreditAdjustment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CreditAdjustment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Adjustment</label>
    <referenceTo>KimbleOne__CreditAdjustment__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>InvoiceLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>