force-app/main/default/objects/KimbleOne__InvoiceLineItem__c/fields/KimbleOne__Deposit__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Deposit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Deposit</label>
    <referenceTo>KimbleOne__Deposit__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>InvoiceLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>