force-app/main/default/objects/KimbleOne__InvoiceLineItem__c/fields/KimbleOne__DepositAdjustment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DepositAdjustment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Deposit Adjustment</label>
    <referenceTo>KimbleOne__DepositAdjustment__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>InvoiceLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>