force-app/main/default/objects/KimbleOne__InvoiceLineItem__c/fields/KimbleOne__ExpenseItem__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseItem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Expense Item included on Invoice Line.</description>
    <label>Expense Item</label>
    <referenceTo>KimbleOne__ExpenseItem__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items_ExpenseItem</relationshipName>
    <type>Lookup</type>
</CustomField>