force-app/main/default/objects/KimbleOne__InvoiceLineItem__c/fields/KimbleOne__ExpensesNetAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpensesNetAmount__c</fullName>
    <formula>IF(ISBLANK(KimbleOne__ExpenseItem__c),0, KimbleOne__NetAmount__c)</formula>
    <label>Expenses Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>