force-app/main/default/objects/KimbleOne__InvoiceLineItem__c/fields/KimbleOne__InvoiceableItem__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoiceableItem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoiceable Item</label>
    <referenceTo>KimbleOne__InvoiceableItem__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>InvoiceLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>