force-app/main/default/objects/KimbleOne__InvoiceLineItem__c/fields/KimbleOne__InvoiceLine__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoiceLine__c</fullName>
    <label>Invoice Line</label>
    <referenceTo>KimbleOne__InvoiceLine__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>InvoiceLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>