force-app/main/default/objects/KimbleOne__InvoiceLineItem__c/fields/KimbleOne__IsActive__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Z_Obsolete - IsActive</label>
    <type>Checkbox</type>
</CustomField>