force-app/main/default/objects/KimbleOne__InvoiceLineItem__c/fields/KimbleOne__Milestone__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Milestone__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Milestone included on Invoice Line.</description>
    <label>Milestone</label>
    <referenceTo>KimbleOne__Milestone__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items_Milestone</relationshipName>
    <type>Lookup</type>
</CustomField>