force-app/main/default/objects/KimbleOne__InvoiceLineItem__c/fields/KimbleOne__PeriodRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PeriodRevenue__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Period Revenue included on Invoice Line.</description>
    <label>Period Revenue</label>
    <referenceTo>KimbleOne__PeriodRevenue__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items_PeriodRevenue</relationshipName>
    <type>Lookup</type>
</CustomField>