force-app/main/default/objects/KimbleOne__InvoiceLineItem__c/fields/KimbleOne__ServicesNetAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ServicesNetAmount__c</fullName>
    <formula>IF( ISBLANK(KimbleOne__ExpenseItem__c), KimbleOne__NetAmount__c, 0)</formula>
    <label>Services Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>