force-app/main/default/objects/KimbleOne__InvoiceLineItem__c/fields/KimbleOne__TimeEntry__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimeEntry__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Time Entry included on Invoice Line.</description>
    <label>Time Entry</label>
    <referenceTo>KimbleOne__TimeEntry__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items_TimeEntry</relationshipName>
    <type>Lookup</type>
</CustomField>