force-app/main/default/objects/KimbleOne__InvoiceLineItem__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__DeliveryElement__c</columns>
    <columns>KimbleOne__Deposit__c</columns>
    <columns>KimbleOne__DepositAdjustment__c</columns>
    <columns>KimbleOne__InvoiceableItem__c</columns>
    <columns>KimbleOne__InvoiceLine__c</columns>
    <columns>KimbleOne__NetAmount__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <columns>KimbleOne__TaxAmount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>KimbleOne__ExpenseItem__c</columns>
    <columns>KimbleOne__PurchaseOrderAllocationItem__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>